--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.0",
-    "google-panorama-by-location": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.11.0",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
