--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "pg": "^7.11.0",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
